fixed overflow appearance for home page

--- a/Circle/src/app/Features/home/home.component.sass
+++ b/Circle/src/app/Features/home/home.component.sass
@@ -1,1 +1,10 @@
+#homePage
+  height: 100%
 
+#homePage > app-post
+  width: 100%
+
+#homePage > app-story
+  display: flex
+  width: fit-content
+  margin-inline: auto
